--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,9 @@
 [build-system]
 requires = ["setuptools>=42"]
 build-backend = "setuptools.build_meta"
+
+[project]
+name = "geffa"
+version = "0.2.0"
+description = "Parse, manipulate and save GFF3 genome annotation files with python code."
+requires-python = ">= 3.8"
